# tcxQTMRT

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  addon.json
docs/: SESSION-LOG.md  session-transcript.jsonl
example-basic/: CMakePresets.json  addons.make
example-basic/src/: main.cpp  tcApp.cpp  tcApp.h
example-qtmrt2osc/: CMakeLists.txt  addons.make
example-qtmrt2osc/src/: main.cpp  mocapOscBridge.h  tcApp.cpp  tcApp.h
src/: tcxQTMRT.cpp  tcxQTMRT.h
